Update copy, links, #contact anchor, form width

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
           </div>
           <div class="header__wrap">
             <div class="header__logo"><a href="/" title="bizZiapp home"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></a></div>
-            <div class="header__login-wrap"><a href="/product" title="Product" class="header__product-link">produkt</a><a href="http://liff.bizziapp.com/" title="Log in" class="header__login">
+            <div class="header__login-wrap"><a href="/product" title="Product" class="header__product-link">produkt</a><a href="http://demo.bizziapp.com/" title="Log in" class="header__login">
                 přihlásit
                 </a></div>
           </div>
