--- a/public/product.html
+++ b/public/product.html
@@ -28,7 +28,7 @@
           </div>
           <div class="header__wrap">
             <div class="header__logo"><a href="/" title="bizZiapp home"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></a></div>
-            <div class="header__login-wrap"><a href="/product" title="Product" class="header__product-link">produkt</a><a href="http://liff.bizziapp.com/" title="Log in" class="header__login">
+            <div class="header__login-wrap"><a href="/product" title="Product" class="header__product-link">produkt</a><a href="http://demo.bizziapp.com/" title="Log in" class="header__login">
                 přihlásit
                 </a></div>
           </div>
@@ -63,16 +63,10 @@
       <div class="overview__row overview__row-reverse">
         <div class="overview__pic overview__pic--left fadeInLeft"><img src="assets/frontend/img/my-tasks.png" alt="Moje úkoly" width="100%" height="auto"></div>
         <div class="overview__article col-md-5 fadeInRight">
-          <h2 class="overview__title align--right">PŘEHLED 360</h2>
+          <h2 class="overview__title align--right">TEMPO ÚKOLŮ</h2>
           <div class="overview__text align--right">
-            Naše fronty jsou inteligentní. Přizpůsobíme nebo
-            je doporučíme na míru dle tempa Vaší
-            společnosti, aby ste díky automatizaci získali
-            maximum. Ke každému úkolu lze přiřadit nejen
-            podúkoly, soubory nebo komentáře, ale proste
-            cokoli, je potřeba. Fronta úkolu zároveň respektuje
-            hierarchii zadání – od firemní, pres týmovou, až po
-            tu individuální.
+            Naše fronty jsou inteligentní. Přizpůsobíme nebo je doporučíme na míru dle tempa Vaší společnosti, aby ste díky automatizaci získali maximum. Ke každému úkolu lze přiřadit nejen podúkoly, soubory nebo komentáře, ale proste cokoli, je potřeba. Fronta úkolu zároveň respektuje hierarchii zadání – od firemní, pres týmovou, až po tu individuální.
+            
             
           </div>
         </div>
@@ -80,35 +74,15 @@
       <div class="overview__row">
         <div class="overview__article col-md-5 fadeInLeft">
           <h2 class="overview__title">PRŮVODCE SCHŮZKOU</h2>
-          <div class="overview__text">
-            Se sofistikovanou 360kou – detailním přehledem
-            klienta, společnosti a obchodu, máte veškeré
-            informace uloženy srozumitelně, kompaktně a
-            vždy po ruce. Vše od úkolu, schůzek či fází
-            obchodu až po přiložené soubory a smlouvy
-            přehledné na jednom místě. Celá karta poté
-            nabízí i možnost chronologického seřazení
-            veškerých aktivit od prvního kontaktu až po
-            poslední telefonát ve formě intuitivní časové osy.
-            To vše v uživatelsky přátelské formě.
-          </div>
+          <div class="overview__text">Se sofistikovanou 360kou – detailním přehledem klienta, společnosti a obchodu, máte veškeré informace uloženy srozumitelně, kompaktně a vždy po ruce. Vše od úkolu, schůzek či fází obchodu až po přiložené soubory a smlouvy přehledné na jednom místě. Celá karta poté nabízí i možnost chronologického seřazení veškerých aktivit od prvního kontaktu až po poslední telefonát ve formě intuitivní časové osy. To vše v uživatelsky přátelské formě.</div>
         </div>
         <div class="overview__pic fadeInRight"><img src="assets/frontend/img/meeting-guide.png" alt="Prúvodce schůzkou - Střední Čechy" width="100%" height="auto"></div>
       </div>
       <div class="overview__row overview__row-reverse">
         <div class="overview__pic overview__pic--left fadeInLeft"><img src="assets/frontend/img/call.png" alt="call" width="100%" height="auto"></div>
         <div class="overview__article col-md-5 fadeInRight">
-          <h2 class="overview__title align--right">PŘEHLED 360</h2>
-          <div class="overview__text align--right">
-            Naše fronty jsou inteligentní. Přizpůsobíme nebo
-            je doporučíme na míru dle tempa Vaší
-            společnosti, aby ste díky automatizaci získali
-            maximum. Ke každému úkolu lze přiřadit nejen
-            podúkoly, soubory nebo komentáře, ale proste
-            cokoli, je potřeba. Fronta úkolu zároveň respektuje
-            hierarchii zadání – od firemní, pres týmovou, až po
-            tu individuální.
-          </div>
+          <h2 class="overview__title align--right">BIZZI CALL</h2>
+          <div class="overview__text align--right">Naše fronty jsou inteligentní. Přizpůsobíme nebo je doporučíme na míru dle tempa Vaší společnosti, aby ste díky automatizaci získali maximum. Ke každému úkolu lze přiřadit nejen podúkoly, soubory nebo komentáře, ale proste cokoli, je potřeba. Fronta úkolu zároveň respektuje hierarchii zadání – od firemní, pres týmovou, až po tu individuální.</div>
         </div>
       </div>
     </section>
@@ -116,15 +90,7 @@
       <div class="container-fluid">
         <div class="text-block align--center">
           <h2 class="about-us__title">O nás</h2>
-          <div class="about-us__article">
-            Už od samého počátku vývoje jsme se snažili o to, aby Bizziapp dokázal ovládat kdokoli a zároveň v něm
-            každý našel přesně to, co potřebuje. Na první pohled to vypadá jako paradox – a právě takové výzvy
-            vyhledáváme. Bizziapp funguje tak trochu jako stavebnice. Řeknete si, co chcete postavit a my Vám
-            dodáme ty správné kostičky. A návod? Ten nebude potřeba. Vše je zcela intuitivní a vždy po ruce. Nový
-            kontakt rovnou připojíte ke společnosti. Je třeba kontakt oslovit? Jedním kliknutím jste v úkolech,
-            druhým kliknutím již vytváříte obchod a třetím sdílíte mezi další uživatele aplikace. Detailní report na
-            Vás pak čeká sám. Vše je navzájem propojeno. Ty nejlepší řešení totiž bývají ty nejjednodušší.
-          </div>
+          <div class="about-us__article"> Bizzapp je komplexní obchodní CRM nástroj, kde budete mít všechny obchodní příležitosti uvnitř Vaší společnsoti jako na dlani. Detailní přehled a řízení veškerých obchodních příležitostí od prvního kontaktu - až po úspěšné uzavření obchodu, to je to, co dělá z Bizzapp zásadního partnera pro maximální růst vašich týmů a tím i celé společnosti. Jednoduše a přitom efektivně.</div>
         </div>
       </div>
     </section>
@@ -135,13 +101,7 @@
           <div class="progress__content progressiveAnim">
             <div class="progress__order">1</div>
             <h3 class="progress__title">Automatizace</h3>
-            <div class="progress__text">
-              Nedělejte nic, co za Vás může udělat stroj.
-              Naše automatizace na mnoha úrovních v
-              celém Bizziapp Vás zbaví zdlouhavých,
-              mechanických úloh. Zbyde Vám tak čas
-              na to, na čem v byznysu opravdu záleží.
-            </div>
+            <div class="progress__text">Nedělejte nic, co za Vás může udělat stroj. Naše automatizace na mnoha úrovních v celém Bizziapp Vás zbaví zdlouhavých, mechanických úloh. Zbyde Vám tak čas na to, na čem v byznysu opravdu záleží.</div>
           </div>
         </div>
         <div class="progress__col">
@@ -149,15 +109,7 @@
           <div class="progress__content progressiveAnim">
             <div class="progress__order">2</div>
             <h3 class="progress__title">Customizace</h3>
-            <div class="progress__text">
-              Chápeme, že každá společnost je jiná.
-              Proto připravujeme naše CRM systémy
-              vždy přesně na míru a skutečně jen pro
-              Vás. Díky přizpůsobení individuálním
-              podmínkám, požadavkům i vytyčeným
-              cílům je Bizziapp neocenitelným
-              pracovním nástrojem.
-            </div>
+            <div class="progress__text">Chápeme, že každá společnost je jiná. Proto připravujeme naše CRM systémy vždy přesně na míru a skutečně jen pro Vás. Díky přizpůsobení individuálním podmínkám, požadavkům i vytyčeným cílům je Bizziapp neocenitelným pracovním nástrojem.</div>
           </div>
         </div>
         <div class="progress__col">
@@ -165,23 +117,16 @@
           <div class="progress__content progressiveAnim">
             <div class="progress__order">3</div>
             <h3 class="progress__title">Reporting</h3>
-            <div class="progress__text">
-              Nemarněte čas tam, kde není hodnota.
-              Díky analýze efektivity a následnému
-              reportu pracujete s daty, která pro Vás
-              mají význam. Biziapp to dokáže, protože
-              je přesně přizpůsoben tomu, co je pro Vás
-              důležité.
-            </div>
+            <div class="progress__text">Nemarněte čas tam, kde není hodnota. Díky analýze efektivity a následnému reportu pracujete s daty, která pro Vás mají význam. Biziapp to dokáže, protože je přesně přizpůsobena tomu, co je pro Vás důležité.</div>
           </div>
         </div>
       </div>
     </section>
-    <section style="background-image: url('assets/frontend/img/contact-cover.png');" class="contact">
+    <section style="background-image: url('assets/frontend/img/contact-cover.png');" id="contact" class="contact">
       <div class="container">
         <h2 class="contact__title progressiveAnim">Buďme efektivní, buďme výkonní, buďme bizzi.</h2>
         <div class="contact__form progressiveAnim">
-          <form action="https://bizziapp.us17.list-manage.com/subscribe/post?u=9e52db3f58c43c9ac069d2d38&amp;amp;id=ba8211c81f" target="_blank" method="POST" novalidate>
+          <form action="https://bizziapp.us17.list-manage.com/subscribe/post?u=9e52db3f58c43c9ac069d2d38&amp;amp;id=ba8211c81f" target="_blank" method="POST" novalidate class="contact__form">
             <input type="hidden" name="b_9e52db3f58c43c9ac069d2d38_ba8211c81f" tabindex="-1" value="" class="contact__input">
             <input type="email" name="EMAIL" placeholder="E-mailová adresa" class="contact__input">
             <button type="submit" value="submit" class="contact__button">Chci vědět více</button>
