Product link in product page

--- a/public/product-en.html
+++ b/public/product-en.html
@@ -31,7 +31,7 @@
           <div class="header__wrap">
             <div class="header__logo"><a href="/en.html" title="bizZiapp home"><img src="assets/frontend/img/logo.svg" alt="logo" width="113px" height="28px"></a>
             </div>
-            <div class="header__login-wrap"><a class="header__product-link" href="/product-en.html" title="Product">product</a><a class="header__login" href="http://demo.bizziapp.com/" title="Log in">log in
+            <div class="header__login-wrap"><a class="header__product-link" href="product-en.html" title="Product">product</a><a class="header__login" href="http://demo.bizziapp.com/" title="Log in">log in
                 </a>
             </div>
           </div>
