--- a/public/product.html
+++ b/public/product.html
@@ -31,7 +31,7 @@
           <div class="header__wrap">
             <div class="header__logo"><a href="/" title="bizZiapp home"><img src="assets/frontend/img/logo.svg" alt="logo" width="113px" height="28px"></a>
             </div>
-            <div class="header__login-wrap"><a class="header__product-link" href="/product.html" title="Product">produkt</a><a class="header__login" href="http://demo.bizziapp.com/" title="Log in">přihlásit
+            <div class="header__login-wrap"><a class="header__product-link" href="product.html" title="Product">produkt</a><a class="header__login" href="http://demo.bizziapp.com/" title="Log in">přihlásit
                 </a>
             </div>
           </div>
