--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <!-- Web title-->
-    <title>Bizzi</title>
+    <title>BizziApp</title>
     <!-- Basic meta tags-->
-    <meta name="mobile-web-app-title" content="Bizzi">
-    <meta name="application-name" content="Bizzi">
+    <meta name="mobile-web-app-title" content="BizziApp">
+    <meta name="application-name" content="BizziApp">
     <meta name="viewport" content="width=device-width, user-scalable=yes, minimum-scale=1.0, maximum-scale=1.5">
     <meta charset="utf-8">
     <!-- Favicon (unnecessary)-->
@@ -15,7 +15,7 @@
     <!-- SEO, Open graph-->
     <meta property="og:description" content="Firemní nástroj pro sledování týmové práce budování vztahů s vašimi klienty.">
     <meta property="og:title" content="Dokonalé zázemí pro obchodníky">
-    <meta property="og:image" content="http://bizzi.scrollorslide.com/og.png">
+    <meta property="og:image" content="https://bizziapp.com/og.png">
     <meta property="og:site_name" content="Bizzi">
     <meta property="og:locale" content="cz">
     <meta property="og:type" content="website">
