--- a/public/product.html
+++ b/public/product.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <!-- Web title-->
-    <title>Bizzi</title>
+    <title>BizziApp</title>
     <!-- Basic meta tags-->
-    <meta name="mobile-web-app-title" content="Bizzi">
-    <meta name="application-name" content="Bizzi">
+    <meta name="mobile-web-app-title" content="BizziApp">
+    <meta name="application-name" content="BizziApp">
     <meta name="viewport" content="width=device-width, user-scalable=yes, minimum-scale=1.0, maximum-scale=1.5">
     <meta charset="utf-8">
     <!-- Favicon (unnecessary)-->
@@ -15,7 +15,7 @@
     <!-- SEO, Open graph-->
     <meta property="og:description" content="Firemní nástroj pro sledování týmové práce budování vztahů s vašimi klienty.">
     <meta property="og:title" content="Dokonalé zázemí pro obchodníky">
-    <meta property="og:image" content="http://bizzi.scrollorslide.com/og.png">
+    <meta property="og:image" content="https://bizziapp.com/og.png">
     <meta property="og:site_name" content="Bizzi">
     <meta property="og:locale" content="cz">
     <meta property="og:type" content="website">
@@ -25,13 +25,13 @@
       <div class="container header--container-product"></div>
       <div class="container header__text">
         <div class="col-xs-12">
-          <div class="header__lang-wrap"><a class="header__lang active" href="product.html">cz</a>
-            <div class="header__line"></div><a class="header__lang " href="product-en.html">en</a>
+          <div class="header__lang-wrap"><a class="header__lang active" href="product">cz</a>
+            <div class="header__line"></div><a class="header__lang " href="product-en">en</a>
           </div>
           <div class="header__wrap">
             <div class="header__logo"><a href="/" title="bizZiapp home"><img src="assets/frontend/img/logo.svg" alt="logo" width="113px" height="28px"></a>
             </div>
-            <div class="header__login-wrap"><a class="header__product-link" href="product.html" title="Product">produkt</a><a class="header__login" href="http://demo.bizziapp.com/" title="Log in">přihlásit
+            <div class="header__login-wrap"><a class="header__product-link" href="product" title="Product">produkt</a><a class="header__login" href="http://demo.bizziapp.com/" title="Log in">přihlásit
                 </a>
             </div>
           </div>
