Fix logo link in product

--- a/public/product.html
+++ b/public/product.html
@@ -29,7 +29,7 @@
             <div class="header__line"></div><a class="header__lang " href="product-en">en</a>
           </div>
           <div class="header__wrap">
-            <div class="header__logo"><a href="/" title="bizZiapp home"><img src="assets/frontend/img/logo.svg" alt="logo" width="113px" height="28px"></a>
+            <div class="header__logo"><a href="index.html" title="bizZiapp home"><img src="assets/frontend/img/logo.svg" alt="logo" width="113px" height="28px"></a>
             </div>
             <div class="header__login-wrap"><a class="header__product-link" href="product" title="Product">produkt</a><a class="header__login" href="http://demo.bizziapp.com/" title="Log in">přihlásit
                 </a>
