--- a/public/product-en.html
+++ b/public/product-en.html
@@ -29,7 +29,7 @@
             <div class="header__line"></div><a class="header__lang active" href="product-en">en</a>
           </div>
           <div class="header__wrap">
-            <div class="header__logo"><a href="/en" title="bizZiapp home"><img src="assets/frontend/img/logo.svg" alt="logo" width="113px" height="28px"></a>
+            <div class="header__logo"><a href="en.html" title="bizZiapp home"><img src="assets/frontend/img/logo.svg" alt="logo" width="113px" height="28px"></a>
             </div>
             <div class="header__login-wrap"><a class="header__product-link" href="product-en" title="Product">product</a><a class="header__login" href="http://demo.bizziapp.com/" title="Log in">log in
                 </a>
