Add html link to product

--- a/public/product-en.html
+++ b/public/product-en.html
@@ -25,8 +25,8 @@
       <div class="container header--container-product"></div>
       <div class="container header__text">
         <div class="col-xs-12">
-          <div class="header__lang-wrap"><a class="header__lang " href="product">cz</a>
-            <div class="header__line"></div><a class="header__lang active" href="product-en">en</a>
+          <div class="header__lang-wrap"><a class="header__lang " href="index.html">cz</a>
+            <div class="header__line"></div><a class="header__lang active" href="en.html">en</a>
           </div>
           <div class="header__wrap">
             <div class="header__logo"><a href="en.html" title="bizZiapp home"><img src="assets/frontend/img/logo.svg" alt="logo" width="113px" height="28px"></a>
